# nginx-log-rotator

./: Cargo.toml  README.md
src/: main.rs
