[package]
name = "nginx-log-rotator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
log = "0.4.14"
nix = "0.22.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.8.21"
signal-hook = "0.3.10"
